pequenas melhorias no texto

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -11,7 +11,11 @@
 <div id="Clojure: Introdução à Programação Funcional"><h1 id="Clojure: Introdução à Programação Funcional" class="header"><b>Clojure: Introdução à Programação Funcional</b></h1></div>
 
 <p>
-Você está a fim de aprender Clojure e programação funcional?? Estou criando uma série de cursos sobre Clojure e Programação Funcional e o primeiro deles já está quase pronto!
+Você está a fim de aprender Clojure e programação funcional?? 
+</p>
+
+<p>
+Estou criando uma série de cursos e o primeiro deles já está quase pronto!
 </p>
 
 <p>
@@ -23,7 +27,7 @@ Preencha seu e-mail no formulário abaixo para eu saber que você tem interesse 
 </p>
 
 <p>
-Ficou na dúvida?? Confira abaixo o conteúdo programático só do primeiro curso que estou finalizando!
+Ficou na dúvida? Confira abaixo o conteúdo programático só do primeiro curso que estou finalizando.
 </p>
 
 <div id="Clojure: Introdução à Programação Funcional-Objetivo do primeiro módulo do curso"><h2 id="Objetivo do primeiro módulo do curso" class="header"><b>Objetivo do primeiro módulo do curso</b></h2></div>
@@ -76,9 +80,13 @@ Conseguir implementar e executar programas básicos através do REPL/clj e ser c
 </p>
 
 <p>
-<b>Clojure-Introducao</b>   
+<b>Introdução</b>   
+</p>
+
+<p>
 Objetivos:  
 </p>
+
 <ul>
 <li>
 Conhecer a proposta do curso, objetivos, metodologia e ferramentas.
