--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -270,126 +270,8 @@ Aprender a criar condicionais usando o <em>when</em>.
 Compreender que existem dois tipos de condicionais: <em>conditional statement</em> e <em>conditional expression</em>.
 
 </ul>
-
-<div id="Clojure: Introdução à Programação Funcional-Parte 6: Introdução aos testes automatizados"><h2 id="Parte 6: Introdução aos testes automatizados" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 6: Introdução aos testes automatizados">Parte 6: Introdução aos testes automatizados</a></h2></div>
-
-<p>
-Objetivos:
-</p>
-
-<p>
-Entender a importância de se criar testes, como criá-los utilizando Clojure e noções de TDD (Desenvolvimento Guiado por Testes).
-</p>
-
-<p>
-<a href="Testes Automatizados e Asserts.html">Testes Automatizados e Asserts</a>
-</p>
-<ul>
-<li>
-Entender a importância de automatiazar os testes.
-
-<li>
-Criar seus primeiros testes automatizados.
-
-<li>
-Compreender para que servem e como utilizar os <em>asserts</em>.
-
-<li>
-Aprender as noções sobre o processo de Desenvolvimento Guiado por Testes.
-
-</ul>
-
-<div id="Clojure: Introdução à Programação Funcional-Parte 7: Thuthy e Falsey"><h2 id="Parte 7: Thuthy e Falsey" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 7: Thuthy e Falsey">Parte 7: Thuthy e Falsey</a></h2></div>
-
-<p>
-Objetivos:
-</p>
-
-<p>
-Entender que em Clojure existe o tipo boleano (true/false) mas existem muitas ocasiões onde a interepretação do que é <em>true</em> e o que é <em>false</em> é um pouco mais abrangente e nessas situações, ao invés de utilizarmos os termos <em>true</em> e <em>false</em> usando o <em>thuthy</em> e <em>falsey</em>.
-</p>
-
-<p>
-<a href="True, False, Thuthy, Falsey.html">True, False, Thuthy, Falsey</a>
-</p>
-<ul>
-<li>
-Compreender a relação entre <em>True</em>, <em>False</em> e as semelhanças e diferenças com <em>Thuthy</em> e <em>Falsey</em>.
-
-<li>
-Perceber porque existe o conceito de <em>Thuthy</em> e <em>Falsey</em> em Clojure e como podemos nos beneficiar deles.
-
-<li>
-Ser capaz de identificar se trata-se de um <em>True/False</em> ou um <em>Thuthy/Falsey</em>.
-
-</ul>
  
-<div id="Clojure: Introdução à Programação Funcional-Parte 8: Conhecendo mais sobre os vetores"><h2 id="Parte 8: Conhecendo mais sobre os vetores" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 8: Conhecendo mais sobre os vetores">Parte 8: Conhecendo mais sobre os vetores</a></h2></div>
-
-<p>
-Objetivos:
-</p>
-
-<p>
-Ser capaz de realizar mais operações utilizando vetores e conhecer a ideia da abordagem <em>wholemeal</em> (refeição completa).
-</p>
-
-<p>
-<a href="Mais sobre Vetores.html">Mais sobre Vetores</a>  
-</p>
-<ul>
-<li>
-Relembrar os conceitos de <em>conj</em> e <em>pop</em>.
-
-<li>
-Conseguir recuperar um elemento que está em uma determinada posição/index.
-
-<li>
-Entender as diferenças entre utilizar a função <em>get</em> e o nome do vetor como função.
-
-<li>
-Entender os problemas possíveis de <em>IndexOutOfBoundsException</em>.
-
-<li>
-Ser capaz de atribuir um valor padrão caso elemento que está sendo recuperado não exista.
-
-<li>
-Conseguir "atualizar" um elemento de um vetor.
-
-</ul>
-
-<p>
-<a href="Wholemeal.html">Wholemeal</a>
-</p>
-<ul>
-<li>
-Entender que é ótimo podermos acessar elementos de uma estrutura de dados, mas que na maior parte do tempo (no paradigma funcional) queremos trabalhar com uma visão um pouco mais ampla, enchergando e operando sobre a estrutura de dados como um todo.
-
-</ul>
-
-<div id="Clojure: Introdução à Programação Funcional-Parte 9: Linguagem dinâmica e consulta de tipos"><h2 id="Parte 9: Linguagem dinâmica e consulta de tipos" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 9: Linguagem dinâmica e consulta de tipos">Parte 9: Linguagem dinâmica e consulta de tipos</a></h2></div>
-
-<p>
-Objetivos:
-</p>
-
-<p>
-Conhecer as vantagens e desvantagens de Clojure ser uma linguagem dinâmica e ser capaz de consultar os tipos através do REPL.
-</p>
-
-<p>
-<a href="Tipos dos dados.html">Tipos dos dados</a>
-</p>
-<ul>
-<li>
-Entender que Clojure é uma linguagem Dinâmica e com inferência de tipos.
-
-<li>
-Aprender a consultar os tipos.
-
-</ul>
-
-<div id="Clojure: Introdução à Programação Funcional-Parte 10: Utilizando uma IDE"><h2 id="Parte 10: Utilizando uma IDE" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 10: Utilizando uma IDE">Parte 10: Utilizando uma IDE</a></h2></div>
+<div id="Clojure: Introdução à Programação Funcional-Parte 6: Utilizando uma IDE"><h2 id="Parte 6: Utilizando uma IDE" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 6: Utilizando uma IDE">Parte 6: Utilizando uma IDE</a></h2></div>
 
 <p>
 Objetivos:  
@@ -441,6 +323,124 @@ Entender pra que serve o <em>Structural edit</em> (também conhecido como <em>pa
 
 <li>
 Aprender a desabilitar o <em>Structurla edit</em> quando necessário.
+
+</ul>
+
+<div id="Clojure: Introdução à Programação Funcional-Parte 7: Introdução aos testes automatizados"><h2 id="Parte 7: Introdução aos testes automatizados" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 7: Introdução aos testes automatizados">Parte 7: Introdução aos testes automatizados</a></h2></div>
+
+<p>
+Objetivos:
+</p>
+
+<p>
+Entender a importância de se criar testes, como criá-los utilizando Clojure e noções de TDD (Desenvolvimento Guiado por Testes).
+</p>
+
+<p>
+<a href="Testes Automatizados e Asserts.html">Testes Automatizados e Asserts</a>
+</p>
+<ul>
+<li>
+Entender a importância de automatiazar os testes.
+
+<li>
+Criar seus primeiros testes automatizados.
+
+<li>
+Compreender para que servem e como utilizar os <em>asserts</em>.
+
+<li>
+Aprender as noções sobre o processo de Desenvolvimento Guiado por Testes.
+
+</ul>
+
+<div id="Clojure: Introdução à Programação Funcional-Parte 8: Thuthy e Falsey"><h2 id="Parte 8: Thuthy e Falsey" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 8: Thuthy e Falsey">Parte 8: Thuthy e Falsey</a></h2></div>
+
+<p>
+Objetivos:
+</p>
+
+<p>
+Entender que em Clojure existe o tipo boleano (true/false) mas existem muitas ocasiões onde a interepretação do que é <em>true</em> e o que é <em>false</em> é um pouco mais abrangente e nessas situações, ao invés de utilizarmos os termos <em>true</em> e <em>false</em> usando o <em>thuthy</em> e <em>falsey</em>.
+</p>
+
+<p>
+<a href="True, False, Thuthy, Falsey.html">True, False, Thuthy, Falsey</a>
+</p>
+<ul>
+<li>
+Compreender a relação entre <em>True</em>, <em>False</em> e as semelhanças e diferenças com <em>Thuthy</em> e <em>Falsey</em>.
+
+<li>
+Perceber porque existe o conceito de <em>Thuthy</em> e <em>Falsey</em> em Clojure e como podemos nos beneficiar deles.
+
+<li>
+Ser capaz de identificar se trata-se de um <em>True/False</em> ou um <em>Thuthy/Falsey</em>.
+
+</ul>
+ 
+<div id="Clojure: Introdução à Programação Funcional-Parte 9: Conhecendo mais sobre os vetores"><h2 id="Parte 9: Conhecendo mais sobre os vetores" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 9: Conhecendo mais sobre os vetores">Parte 9: Conhecendo mais sobre os vetores</a></h2></div>
+
+<p>
+Objetivos:
+</p>
+
+<p>
+Ser capaz de realizar mais operações utilizando vetores e conhecer a ideia da abordagem <em>wholemeal</em> (refeição completa).
+</p>
+
+<p>
+<a href="Mais sobre Vetores.html">Mais sobre Vetores</a>  
+</p>
+<ul>
+<li>
+Relembrar os conceitos de <em>conj</em> e <em>pop</em>.
+
+<li>
+Conseguir recuperar um elemento que está em uma determinada posição/index.
+
+<li>
+Entender as diferenças entre utilizar a função <em>get</em> e o nome do vetor como função.
+
+<li>
+Entender os problemas possíveis de <em>IndexOutOfBoundsException</em>.
+
+<li>
+Ser capaz de atribuir um valor padrão caso elemento que está sendo recuperado não exista.
+
+<li>
+Conseguir substituir um elemento de um vetor utilizando a função <em>assoc</em>.
+
+</ul>
+
+<p>
+<a href="Wholemeal.html">Wholemeal</a>
+</p>
+<ul>
+<li>
+Entender que é ótimo podermos acessar elementos de uma estrutura de dados, mas que na maior parte do tempo (no paradigma funcional) queremos trabalhar com uma visão um pouco mais ampla, enchergando e operando sobre a estrutura de dados como um todo.
+
+</ul>
+
+<div id="Clojure: Introdução à Programação Funcional-Parte 10: Linguagem dinâmica e consulta de tipos"><h2 id="Parte 10: Linguagem dinâmica e consulta de tipos" class="header"><a href="#Clojure: Introdução à Programação Funcional-Parte 10: Linguagem dinâmica e consulta de tipos">Parte 10: Linguagem dinâmica e consulta de tipos</a></h2></div>
+
+<p>
+Objetivos:
+</p>
+
+<p>
+Conhecer as vantagens e desvantagens de Clojure ser uma linguagem dinâmica e ser capaz de consultar os tipos através do REPL.
+</p>
+
+<p>
+<a href="Tipos dos dados.html">Tipos dos dados</a>
+</p>
+<ul>
+<li>
+Entender que Clojure é uma linguagem Dinâmica e com inferência de tipos.
+
+<li>
+Aprender a consultar os tipos.
 
 </ul>
 
