Atualizando informações para até 14/02

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -1,45 +1,258 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="pt-br">
+  <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
-<title>Curso de Clojure</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Curso de Clojure</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-<div id="Clojure: Introdução à Programação Funcional"><h1 id="Clojure: Introdução à Programação Funcional" class="header"><a href="#Clojure: Introdução à Programação Funcional">Clojure: Introdução à Programação Funcional</a></h1></div>
+  <h1 class="header">Clojure: Introdução à Programação Funcional</h1>
 
-<p>
-Você está a fim de aprender Clojure e programação funcional?? 
-</p>
+  <p>
+    Você está a fim de aprender Clojure e programação funcional??
+  </p>
 
-<p>
-Acesse meu primeiro curso <a href="https://segundatech.teachable.com">Clojure: Introdução à Programação Funcional</a>.
-</p>
+  <p>
+    Acesse meu primeiro curso <a href="https://segundatech.teachable.com">Clojure: Introdução à Programação Funcional</a>.
+  </p>
 
-<p>
-Caso tenha interesse, preencha seu e-mail no formulário abaixo e
-irei te avisar assim que novos cursos estiverem disponíveis.
-</p>
+  <p>
+    Caso tenha interesse, preencha seu e-mail no formulário abaixo e
+    irei te avisar assim que novos cursos estiverem disponíveis.
+  </p>
 
-<p>
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } </style> <div id="mc_embed_signup"> <form action="https://tech.us6.list-manage.com/subscribe/post?u=0258c764d40e2e0e5603f750d&amp;id=d0c9918c27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <h2>Quer ser avisada quando novos cursos estiverem disponíveis? Inscreva-se abaixo!</h2> <div class="mc-field-group"> <label for="mce-EMAIL">E-mail <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0258c764d40e2e0e5603f750d_d0c9918c27" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Inscrever" name="subscribe" id="mc-embedded-subscribe" class="button"></div> </div> </form> </div>
-</p>
+  <p>
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } </style> <div id="mc_embed_signup"> <form action="https://tech.us6.list-manage.com/subscribe/post?u=0258c764d40e2e0e5603f750d&amp;id=d0c9918c27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <h2>Quer ser avisada quando novos cursos estiverem disponíveis? Inscreva-se abaixo!</h2> <div class="mc-field-group"> <label for="mce-EMAIL">E-mail <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0258c764d40e2e0e5603f750d_d0c9918c27" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Inscrever" name="subscribe" id="mc-embedded-subscribe" class="button"></div> </div> </form> </div>
+  </p>
 
-<hr />
+  <hr />
 
-<div id="Clojure: Introdução à Programação Funcional-Transparência"><h3 id="Transparência" class="header"><a href="#Clojure: Introdução à Programação Funcional-Transparência">Transparência</a></h3></div>
+  <h3 class="header">Transparência</h3>
 
-<p>
-O pagamento/contribuição do curso é opcional e considero importante ser o mais transparente
-possível. Por isso, resolvi compartilhar aqui as informações de custos e lucros
-obtidos pelo mesmo.
-</p>
+  <p>
+    O pagamento/contribuição do curso é opcional e considero importante ser o mais transparente
+    possível. Por isso, resolvi compartilhar aqui as informações de custos e lucros
+    obtidos pelo mesmo.
+  </p>
 
-<p>
-<span id="Clojure: Introdução à Programação Funcional-Transparência-Período considerado"></span><strong id="Período considerado">Período considerado</strong>: de 13/10 até 10/11/2021
-</p>
+  <p>
+    <strong>Período considerado</strong>: de 13/10/2021 até 14/02/2021
+  </p>
+
+  <p>
+      <strong>Resumo consolidado (soma das plataformas</strong> <a href="https://segundatech.teachable.com">Teachable</a>
+      <strong> e </strong><a href="https://segundatech.teachable.com/">Udemy</a>)
+  </p>
+
+  <table>
+      <tr>
+          <td>
+              Total arrecadado
+          </td>
+          <td>
+              287,27 dólares (~1.504,81 reais)
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Total retido pelas plataformas
+          </td>
+          <td>
+              92.55 dólares (~482,48 reais)
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Total repassado para mim
+          </td>
+          <td>
+              194.72 dólares (~1.017,68 reais)
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Total de alunos
+          </td>
+          <td>
+              177
+          </td>
+      </tr>
+  </table>
+
+  <p>
+      <strong>Detalhes da plataforma Teachable</strong>
+  </p>
+  <table>
+      <tr>
+          <td>
+              Total arrecadado
+          </td>
+          <td>
+              210 dólares
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Taxas e impostos retidos
+          </td>
+          <td>
+               74 dólares
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Valor repassado para mim
+          </td>
+          <td>
+              136 dólares (~714,46 reais)
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Quantidade de estudantes
+          </td>
+          <td>
+              133
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Valor médio arrecadado por estudante
+          </td>
+          <td>
+              5,37 reais
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Quantidade de pagantes
+          </td>
+          <td>
+              36
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Percentual de pagantes
+          </td>
+          <td>
+             27%
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Estudantes não pagantes
+          </td>
+          <td>
+              97
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Estudantes que contribuíram 5 reais
+          </td>
+          <td>
+              2
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Estudantes que contribuíram 15 reais
+          </td>
+          <td>
+              4
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Estudantes que contribuíram 30 reais
+          </td>
+          <td>
+              27
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Estudantes que contribuíram 100 reais
+          </td>
+          <td>
+              3
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Quantidade de lições realizadas na teachable
+          </td>
+          <td>
+              1247
+          </td>
+      </tr>
+  </table>
+  <p>
+      <strong>Obs</strong>: retirei do site a opção de pagar 5 reais, pois este valor não cobria as
+      taxas e eu recebia 0 real da compra.
+  </p>
+
+  <p>
+      <strong>Detalhes da plataforma Udemy</strong>
+  </p>
+  <table>
+      <tr>
+          <td>
+              Total arrecadado
+          </td>
+          <td>
+              77.27 dólares
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Taxas e impostos retidos
+          </td>
+          <td>
+              18.55 dólares
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Valor repassado para mim
+          </td>
+          <td>
+              58.72 dólares (~307,75 reais)
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Quantidade de estudantes
+          </td>
+          <td>
+              44
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Valor médio arrecadado por estudante
+          </td>
+          <td>
+              6,99 reais
+          </td>
+      </tr>
+      <tr>
+          <td>
+              Quantidade de tempo assistido (soma de todos os alunos)
+          </td>
+          <td>
+              5.918 minutos (98,63 horas)
+          </td>
+      </tr>
+  </table>
+
+  <!--
+  <p>
+    <strong id="Período considerado">Período considerado</strong>: de 13/10 até 10/11/2021
+  </p>
 
 <table>
 <tr>
@@ -108,7 +321,7 @@ Estudantes não pagantes
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 5 reais
+Estudantes que contribuíram 5 reais
 </td>
 <td>
 2
@@ -116,7 +329,7 @@ Estudantes que contribuiram 5 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 15 reais
+Estudantes que contribuíram 15 reais
 </td>
 <td>
 4
@@ -124,7 +337,7 @@ Estudantes que contribuiram 15 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 30 reais
+Estudantes que contribuíram 30 reais
 </td>
 <td>
 25
@@ -132,7 +345,7 @@ Estudantes que contribuiram 30 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 100 reais
+Estudantes que contribuíram 100 reais
 </td>
 <td>
 3
@@ -219,7 +432,7 @@ Estudantes não pagantes
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 5 reais
+Estudantes que contribuíram 5 reais
 </td>
 <td>
 2
@@ -227,7 +440,7 @@ Estudantes que contribuiram 5 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 15 reais
+Estudantes que contribuíram 15 reais
 </td>
 <td>
 4
@@ -235,7 +448,7 @@ Estudantes que contribuiram 15 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 30 reais
+Estudantes que contribuíram 30 reais
 </td>
 <td>
 24
@@ -243,7 +456,7 @@ Estudantes que contribuiram 30 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 100 reais
+Estudantes que contribuíram 100 reais
 </td>
 <td>
 1
@@ -331,7 +544,7 @@ Estudantes não pagantes
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 5 reais
+Estudantes que contribuíram 5 reais
 </td>
 <td>
 2
@@ -339,7 +552,7 @@ Estudantes que contribuiram 5 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 15 reais
+Estudantes que contribuíram 15 reais
 </td>
 <td>
 1
@@ -347,7 +560,7 @@ Estudantes que contribuiram 15 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 30 reais
+Estudantes que contribuíram 30 reais
 </td>
 <td>
 16
@@ -355,7 +568,7 @@ Estudantes que contribuiram 30 reais
 </tr>
 <tr>
 <td>
-Estudantes que contribuiram 100 reais
+Estudantes que contribuíram 100 reais
 </td>
 <td>
 0
@@ -370,11 +583,7 @@ Quantidade de lições realizadas
 </td>
 </tr>
 </table>
-
-<p>
-<span id="Clojure: Introdução à Programação Funcional-Transparência-Obs"></span><strong id="Obs">Obs</strong>: retirei do site a opção de pagar 5 reais pois este valor não cobria as
-taxas e eu recebia 0 real da compra.
-</p>
+-->
 
 </body>
 </html>
