deixando claro que é valor bruto

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -48,7 +48,7 @@
   <table>
       <tr>
           <td>
-              Total arrecadado
+              Total arrecadado (bruto)
           </td>
           <td>
               287.27 dólares (~1.504,81 reais)
