Corrigindo link udemy e header tables

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -40,12 +40,13 @@
     <strong>Período considerado</strong>: de 13/10/2021 até 14/02/2021
   </p>
 
-  <p>
-      <strong>Resumo consolidado (soma das plataformas</strong> <a href="https://segundatech.teachable.com">Teachable</a>
-      <strong> e </strong><a href="https://segundatech.teachable.com/">Udemy</a>)
-  </p>
-
-  <table>
+  <table style="width:100%">
+      <tr>
+        <th colspan="2" bgcolor="#ddd">
+            <strong>Resumo consolidado (soma das plataformas</strong> <a href="https://segundatech.teachable.com">Teachable</a>
+            <strong> e </strong><a href="https://www.udemy.com/course/clojure-introducao-a-programacao-funcional">Udemy</a>)
+        </th>
+      </tr>
       <tr>
           <td>
               Total arrecadado (bruto)
@@ -80,10 +81,14 @@
       </tr>
   </table>
 
-  <p>
-      <strong>Detalhes da plataforma Teachable</strong>
-  </p>
-  <table>
+  <br/>
+
+  <table style="width:100%">
+      <tr>
+        <th colspan="2" bgcolor="#ddd">
+            <strong>Detalhes da plataforma Teachable</strong>
+        </th>
+      </tr>
       <tr>
           <td>
               Total arrecadado
@@ -189,15 +194,18 @@
           </td>
       </tr>
   </table>
-  <p>
-      <strong>Obs</strong>: retirei do site a opção de pagar 5 reais, pois este valor não cobria as
-      taxas e eu recebia 0 real da compra.
-  </p>
 
   <p>
-      <strong>Detalhes da plataforma Udemy</strong>
+    <strong>Obs</strong>: retirei do site a opção de pagar 5 reais, pois este valor não cobria as
+    taxas e eu recebia 0 real da compra.
   </p>
-  <table>
+
+  <table style="width:100%">
+    <tr>
+        <th colspan="2" bgcolor="#ddd">
+            <strong>Detalhes da plataforma Udemy</strong>
+        </th>
+      </tr>
       <tr>
           <td>
               Total arrecadado
