--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -19,12 +19,12 @@
     Acesse meu primeiro curso <a href="https://segundatech.teachable.com">Clojure: Introdução à Programação Funcional</a>.
   </p>
 
-  <p>
+  <!-- p>
     Caso tenha interesse, preencha seu e-mail no formulário abaixo e
     irei te avisar assim que novos cursos estiverem disponíveis.
   </p>
 
-  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } </style> <div id="mc_embed_signup"> <form action="https://tech.us6.list-manage.com/subscribe/post?u=0258c764d40e2e0e5603f750d&amp;id=d0c9918c27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <h2>Quer ser avisada quando novos cursos estiverem disponíveis? Inscreva-se abaixo!</h2> <div class="mc-field-group"> <label for="mce-EMAIL">E-mail <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0258c764d40e2e0e5603f750d_d0c9918c27" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Inscrever" name="subscribe" id="mc-embedded-subscribe" class="button"></div> </div> </form></div>
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> <style type="text/css"> #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; } </style> <div id="mc_embed_signup"> <form action="https://tech.us6.list-manage.com/subscribe/post?u=0258c764d40e2e0e5603f750d&amp;id=d0c9918c27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> <div id="mc_embed_signup_scroll"> <h2>Quer ser avisada quando novos cursos estiverem disponíveis? Inscreva-se abaixo!</h2> <div class="mc-field-group"> <label for="mce-EMAIL">E-mail <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> </div> <div id="mce-responses" class="clear"> <div class="response" id="mce-error-response" style="display:none"></div> <div class="response" id="mce-success-response" style="display:none"></div> </div> <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0258c764d40e2e0e5603f750d_d0c9918c27" tabindex="-1" value=""></div> <div class="clear"><input type="submit" value="Inscrever" name="subscribe" id="mc-embedded-subscribe" class="button"></div> </div> </form></div -->
 
   <hr />
 
@@ -34,10 +34,6 @@
     O pagamento/contribuição do curso é opcional e considero importante ser o mais transparente
     possível. Por isso, resolvi compartilhar aqui as informações de custos e lucros
     obtidos pelo mesmo.
-  </p>
-
-  <p>
-    <strong>Período considerado</strong>: de 13/10/2021 até 14/02/2021
   </p>
 
   <table style="width:100%">
@@ -91,7 +87,7 @@
       </tr>
       <tr>
           <td>
-              Total arrecadado
+              Total arrecadado (bruto)
           </td>
           <td>
               210 dólares
@@ -208,7 +204,7 @@
       </tr>
       <tr>
           <td>
-              Total arrecadado
+              Total arrecadado (bruto)
           </td>
           <td>
               77.27 dólares
