Valor médio arrecadado por estudante

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -43,10 +43,8 @@
     <table style="width:100%">
         <tr>
             <th colspan="2" bgcolor="#ddd">
-                <strong>Resumo consolidado (soma das plataformas</strong> <a
-                    href="https://segundatech.teachable.com">Teachable</a>
-                <strong> e </strong><a
-                    href="https://www.udemy.com/course/clojure-introducao-a-programacao-funcional">Udemy</a>)
+                Resumo consolidado (soma das plataformas <a href="https://segundatech.teachable.com">Teachable</a>
+                e <a href="https://www.udemy.com/course/clojure-introducao-a-programacao-funcional">Udemy</a>)
             </th>
         </tr>
         <tr>
@@ -81,6 +79,14 @@
                 177
             </td>
         </tr>
+        <tr>
+            <td>
+                Valor médio arrecadado por estudante
+            </td>
+            <td>
+                8,50 reais
+            </td>
+        </tr>
     </table>
 
     <br />
@@ -88,7 +94,7 @@
     <table style="width:100%">
         <tr>
             <th colspan="2" bgcolor="#ddd">
-                <strong>Detalhes da plataforma Teachable</strong>
+                Detalhes da plataforma <a href="https://segundatech.teachable.com">Teachable</a>
             </th>
         </tr>
         <tr>
@@ -198,14 +204,15 @@
     </table>
 
     <p>
-        <strong>Obs</strong>: retirei do site a opção de pagar 5 reais, pois este valor não cobria as
+        <strong>Obs</strong>: retirei a opção de pagar 5 reais pois este valor não cobria as
         taxas e eu recebia 0 real da compra.
     </p>
 
     <table style="width:100%">
         <tr>
             <th colspan="2" bgcolor="#ddd">
-                <strong>Detalhes da plataforma Udemy</strong>
+                Detalhes da plataforma <a
+                    href="https://www.udemy.com/course/clojure-introducao-a-programacao-funcional">Udemy</a>
             </th>
         </tr>
         <tr>
