adicionando espaço entra as tabelas

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -52,7 +52,7 @@
                 Total arrecadado (bruto)
             </td>
             <td>
-                287.27 dólares (~1.504,81 reais)
+                360,33 dólares (~1.811,02 reais)
             </td>
         </tr>
         <tr>
@@ -60,7 +60,7 @@
                 Total retido pelas plataformas
             </td>
             <td>
-                92.55 dólares (~482,48 reais)
+                105,67 dólares (~530,76 reais)
             </td>
         </tr>
         <tr>
@@ -68,15 +68,15 @@
                 Total repassado para mim
             </td>
             <td>
-                194.72 dólares (~1.017,68 reais)
+                261,54 dólares (~1.315,05 reais)
             </td>
         </tr>
         <tr>
             <td>
-                Total de alunos
+                Total de estudantes
             </td>
             <td>
-                177
+                230
             </td>
         </tr>
         <tr>
@@ -84,7 +84,7 @@
                 Valor médio arrecadado por estudante
             </td>
             <td>
-                8,50 reais
+                7,87 reais
             </td>
         </tr>
     </table>
@@ -102,7 +102,7 @@
                 Total arrecadado (bruto)
             </td>
             <td>
-                210 dólares
+                243,72 dólares
             </td>
         </tr>
         <tr>
@@ -110,7 +110,7 @@
                 Taxas e impostos retidos
             </td>
             <td>
-                74 dólares
+                87,12 dólares
             </td>
         </tr>
         <tr>
@@ -118,7 +118,7 @@
                 Valor repassado para mim
             </td>
             <td>
-                136 dólares (~714,46 reais)
+                156,60 dólares (~787,79 reais)
             </td>
         </tr>
         <tr>
@@ -126,7 +126,7 @@
                 Quantidade de estudantes
             </td>
             <td>
-                133
+                165
             </td>
         </tr>
         <tr>
@@ -134,7 +134,7 @@
                 Valor médio arrecadado por estudante
             </td>
             <td>
-                5,37 reais
+                4,77 reais
             </td>
         </tr>
         <tr>
@@ -142,7 +142,7 @@
                 Quantidade de pagantes
             </td>
             <td>
-                36
+                42
             </td>
         </tr>
         <tr>
@@ -150,7 +150,7 @@
                 Percentual de pagantes
             </td>
             <td>
-                27%
+                25%
             </td>
         </tr>
         <tr>
@@ -158,10 +158,10 @@
                 Estudantes não pagantes
             </td>
             <td>
-                97
+                123
             </td>
         </tr>
-        <tr>
+        <!-- tr>
             <td>
                 Estudantes que contribuíram 5 reais
             </td>
@@ -200,13 +200,15 @@
             <td>
                 1247
             </td>
-        </tr>
+        </tr -->
     </table>
 
-    <p>
+    <!-- p>
         <strong>Obs</strong>: retirei a opção de pagar 5 reais pois este valor não cobria as
         taxas e eu recebia 0 real da compra.
-    </p>
+    </p -->
+
+    <br />
 
     <table style="width:100%">
         <tr>
@@ -220,7 +222,7 @@
                 Total arrecadado (bruto)
             </td>
             <td>
-                77.27 dólares
+                116,61 dólares
             </td>
         </tr>
         <tr>
@@ -228,7 +230,7 @@
                 Taxas e impostos retidos
             </td>
             <td>
-                18.55 dólares
+                18,55 dólares
             </td>
         </tr>
         <tr>
@@ -236,7 +238,7 @@
                 Valor repassado para mim
             </td>
             <td>
-                58.72 dólares (~307,75 reais)
+                104,94 dólares (~527,75 reais)
             </td>
         </tr>
         <tr>
@@ -244,7 +246,7 @@
                 Quantidade de estudantes
             </td>
             <td>
-                44
+                65
             </td>
         </tr>
         <tr>
@@ -252,7 +254,7 @@
                 Valor médio arrecadado por estudante
             </td>
             <td>
-                6,99 reais
+                8,12 reais
             </td>
         </tr>
         <tr>
@@ -260,7 +262,8 @@
                 Quantidade de tempo assistido (soma de todos os alunos)
             </td>
             <td>
-                5.918 minutos (98,63 horas)
+                11.166 minutos (186 horas)
+                <!-- https://www.udemy.com/instructor/performance/engagement/?date_filter=year&course_id=4137784 -->
             </td>
         </tr>
     </table>
