Atualizando valores/lucro

--- a/_resources/clojure/index.html
+++ b/_resources/clojure/index.html
@@ -52,7 +52,7 @@
                 Total arrecadado (bruto)
             </td>
             <td>
-                360,33 dólares (~1.811,02 reais)
+                448 dólares (~2.383 reais)
             </td>
         </tr>
         <tr>
@@ -60,7 +60,7 @@
                 Total retido pelas plataformas
             </td>
             <td>
-                105,67 dólares (~530,76 reais)
+                111 dólares (~591 reais)
             </td>
         </tr>
         <tr>
@@ -68,7 +68,7 @@
                 Total repassado para mim
             </td>
             <td>
-                261,54 dólares (~1.315,05 reais)
+                261,54 dólares (~1.793 reais)
             </td>
         </tr>
         <tr>
@@ -102,7 +102,7 @@
                 Total arrecadado (bruto)
             </td>
             <td>
-                243,72 dólares
+                284 dólares
             </td>
         </tr>
         <tr>
@@ -110,7 +110,7 @@
                 Taxas e impostos retidos
             </td>
             <td>
-                87,12 dólares
+                99 dólares
             </td>
         </tr>
         <tr>
@@ -118,7 +118,7 @@
                 Valor repassado para mim
             </td>
             <td>
-                156,60 dólares (~787,79 reais)
+                185 dólares (~985 reais)
             </td>
         </tr>
         <tr>
@@ -126,7 +126,7 @@
                 Quantidade de estudantes
             </td>
             <td>
-                165
+                183
             </td>
         </tr>
         <tr>
@@ -134,7 +134,7 @@
                 Valor médio arrecadado por estudante
             </td>
             <td>
-                4,77 reais
+                5,38 reais
             </td>
         </tr>
         <tr>
@@ -142,15 +142,7 @@
                 Quantidade de pagantes
             </td>
             <td>
-                42
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Percentual de pagantes
-            </td>
-            <td>
-                25%
+                49
             </td>
         </tr>
         <tr>
@@ -158,7 +150,15 @@
                 Estudantes não pagantes
             </td>
             <td>
-                123
+                134
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Percentual de pagantes
+            </td>
+            <td>
+                36%
             </td>
         </tr>
         <!-- tr>
@@ -222,7 +222,7 @@
                 Total arrecadado (bruto)
             </td>
             <td>
-                116,61 dólares
+                164 dólares
             </td>
         </tr>
         <tr>
@@ -230,7 +230,7 @@
                 Taxas e impostos retidos
             </td>
             <td>
-                18,55 dólares
+                12 dólares
             </td>
         </tr>
         <tr>
@@ -238,7 +238,7 @@
                 Valor repassado para mim
             </td>
             <td>
-                104,94 dólares (~527,75 reais)
+                152 dólares (~809 reais)
             </td>
         </tr>
         <tr>
@@ -246,7 +246,7 @@
                 Quantidade de estudantes
             </td>
             <td>
-                65
+                89
             </td>
         </tr>
         <tr>
@@ -254,7 +254,7 @@
                 Valor médio arrecadado por estudante
             </td>
             <td>
-                8,12 reais
+                9 reais
             </td>
         </tr>
         <tr>
@@ -262,7 +262,7 @@
                 Quantidade de tempo assistido (soma de todos os alunos)
             </td>
             <td>
-                11.166 minutos (186 horas)
+                17.195 minutos (286 horas) e 66 alunos ativos.
                 <!-- https://www.udemy.com/instructor/performance/engagement/?date_filter=year&course_id=4137784 -->
             </td>
         </tr>
